@@ -6,7 +6,8 @@ ChangeLog
 0.2.8  2005-05-22  More LSCP command syntax changes, particularly on the
                    event subscription ones: the LSCP_EVENT_CHANNELS event
                    definition were renamed to LSCP_EVENT_CHANNEL_COUNT,
-                   as to be more meaningful.
+                   as to be more meaningful. Added support for the newest
+                   LSCP command: GET SERVER INFO; lscp_get_server_info().
 
 0.2.8  2005-05-08  [bug #9] Fixed for a LSCP command syntax convention 
                    consistency, regarding the enumeration of available 
